--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="container">
   <app-tabla-clientes></app-tabla-clientes>
   <app-crear-cliente></app-crear-cliente>
+  <app-stats></app-stats>
 </div>
